--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,7 +5,7 @@ name: Generate Stats Images
 # Controls when the action will run. Triggers the workflow on push events
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   schedule:
     - cron: "5 0 * * *"
   workflow_dispatch:
@@ -55,6 +55,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         EXCLUDED: ${{ secrets.EXCLUDED }}
         EXCLUDED_LANGS: ${{ secrets.EXCLUDE_LANGS }}
+        EXCLUDE_FORKED_REPOS: true 
 
     # Commits all changed files to the repository
     - name: Commit to the repo
